--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             Фритрек и нулевой спринт: Подготовка к работе
           </h3>
           <img
-            src="./images/gif/спринт_0.gif"
+            src="./images/спринт_0.gif"
             alt="Мужчина улыбается"
-            class="card__img"/>
+            class="card__img men__smile"/>
           <div class="card__container-text">
             <p class="card__text">
               Это было самое начало пути. На этом этапе важно было проникнуться
@@ -81,9 +81,9 @@
         <article class="card">
           <h3 class="card__title">1 спринт: Я — чистый лист</h3>
           <img
-            src="./images/gif/спринт_1.gif"
-            alt="Усатый мужик облизывается в предвкушении"
-            class="card__img"/>
+            src="./images/Начало.jpg"
+            alt="Мужчина печатает по клавиатуре"
+            class="card__img men__tab"/>
           <div class="card__container-text">
             <p class="card__text">
               На первых этапах мы работали со страхами и сомнениями, которые
@@ -142,9 +142,9 @@
         <article class="card">
           <h3 class="card__title">1 спринт: А если не получится?</h3>
           <img
-            src="./images/gif/спринт_1-1.gif"
-            alt="Качок радостно стукает по шкафчику в раздевалке"
-            class="card__img"/>
+            src="./images/долгоносик.jpg"
+            alt="Лысый парень с пивом"
+            class="card__img long__nose"/>
           <div class="card__container-text">
             <p class="card__text">
               Первый проект — позади! Но это всё ещё самое начало пути. Радость
@@ -200,7 +200,10 @@
         </article>
         <article class="card">
           <h3 class="card__title">2 спринт: Погоня за идеалом</h3>
-          <img src="./images/gif/спринт_2.gif" alt="Качок на пробежке по пляжу" class="card__img" />
+          <img 
+          src="./images/борьба.jpg" 
+          alt="Два кочка борются" 
+          class="card__img training" />
           <div class="card__container-text">
             <p class="card__text">
               На этом этапе вы уже достаточно разбирались в основах вёрстки,
@@ -249,7 +252,10 @@
         </article>
         <article class="card">
           <h3 class="card__title">2 спринт: О тех, кто рядом</h3>
-          <img src="./images/gif/спринт_2-2.gif" alt="Команда из 4 качков стукают кулаками" class="card__img" />
+          <img 
+          src="./images/друзья.jpg " 
+          alt="Команда из 4 качков стукают кулаками" 
+          class="card__img friend" />
           <div class="card__container-text">
             <p class="card__text">
               Всё это время вы были не одиноки (хотя, возможно, иногда и
@@ -299,7 +305,9 @@
         </article>
         <article class="card">
           <h3 class="card__title">3 спринт: Обходные стратегии</h3>
-          <img src="./images/Local__mem.jpg" alt="Гигачад рядом с рыбацким стулом" class="card__img" />
+          <img src="./images/Local__mem.jpg" 
+          alt="Гигачад рядом с рыбацким стулом" 
+          class="card__img local__mem" />
           <div class="card__container-text">
             <p class="card__text">
               На этом курсе вы постоянно решали разные задачи. В какой-то момент
@@ -346,7 +354,10 @@
         </article>
         <article class="card">
           <h3 class="card__title">3 спринт: Когда опускаются руки</h3>
-          <img src="./images/top__food.jpg" alt="Полусырники полуоладьи на сковородке" class="card__img" />
+          <img 
+          src="./images/top__food.jpg" 
+          alt="Полусырники полуоладьи на сковородке" 
+          class="card__img top__food" />
           <div class="card__container-text">
             <p class="card__text">
               Во время учёбы часто возникает чувство, когда не знаешь, за что
@@ -395,7 +406,10 @@
         </article>
         <article class="card">
           <h3 class="card__title">«Сейчас я здесь»</h3>
-          <img src="./images/gif/the_end.gif" alt="Накаченый мужчина в позе двойного бицепса" class="card__img" />
+          <img 
+          src="./images/the_end.gif" 
+          alt="Накаченый мужчина в позе двойного бицепса" 
+          class="card__img end" />
           <div class="card__container-text">
             <p class="card__text">
               Сейчас вы уже очень много знаете о вёрстке. Но это только начало.
