--- a/index.html
+++ b/index.html
@@ -482,8 +482,8 @@
             продолжить
           </h4>
         </div>
-        <button class="module__button" onclick="window['module-id'].close()">
-          <span type="button" class="button__text">OK</span>
+        <button class="module__button" type="button" onclick="window['module-id'].close()">
+          <span  class="button__text">OK</span>
         </button>
       </dialog>
     </footer>
