--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
         <span class="button__text">Сохранить на память</span>
       </button>
       <dialog class="module__window" id="module-id">
-        <form action="" method="dialog">
+        <form action="#" method="dialog">
           <div class="module__title">
            <svg viewBox="0 0 39 39" class="floppy__svg">
               <use href="./svg/floppy.svg#floppy"></use>
